fix: gradient covering content

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -43,3 +43,12 @@
     transform: scale(0.8) rotate(-150deg);
   }
 }
+
+.childrenContainer {
+  z-index: 1;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
